--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>Main</mainClass>
+                                    <mainClass>App</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
