refactoring - isolating database types

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,9 @@
-driver=org.sqlite.JDBC
-url=jdbc:sqlite::memory:
+servername=mysql
+driver=com.mysql.jdbc.Driver
+url=jdbc:mysql://localhost:3306/ktasks
+username=root
+password=Kdev_2017
 
-
+#servername=sqlite
+#driver=org.sqlite.JDBC
+#url=jdbc:sqlite::memory:
