adição do db mysql

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,9 +1,10 @@
 servername=mysql
-driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/ktasks
-username=root
-password=Kdev_2017
-
 #servername=sqlite
-#driver=org.sqlite.JDBC
-#url=jdbc:sqlite::memory:
+
+mysql-driver=com.mysql.jdbc.Driver
+mysql-url=jdbc:mysql://localhost:3306/ktasks
+mysql-username=root
+mysql-password=Kdev_2017
+
+sqlite-driver=org.sqlite.JDBC
+sqlite-url=jdbc:sqlite::memory:
